✨ [FEAT] 연습모드 조회
